// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link renders native attributes 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      download="filename"
      href="https://toptal.com/filename.txt"
      rel="noopener"
      target="_blank"
    >
      Please verify your email
    </a>
  </div>
</div>
`;
